[package]
name = "fingermonitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.3"
druid = { version = "0.8.3", features = ["png", "im", "svg", "image"] }
sysinfo = "0.28.4"
chrono = "0.4.24"
